--- a/styles/index.css
+++ b/styles/index.css
@@ -135,6 +135,25 @@ header a:hover::after {
     background-color: rgb(118, 255, 255);
 }
 
+#tv
+{
+    display: flex;
+    height: 96vh;
+    background: linear-gradient(rgb(20, 20, 20), rgb(16, 16, 16), rgb(20,20,20));
+}
+#tv-image{
+    width: 20vw;
+    height: auto;
+    margin: auto;
+    filter: drop-shadow(0px 0px 80px #0000001e);
+    transform: scale(1.0);
+    cursor: pointer;
+    transition: transform 0.3s steps(3);
+}
+#tv-image:hover{
+    transform: scale(1.05);
+}
+
 /* TU LOADING */
 .loader {
     border: 8px solid rgba(255, 255, 255, 0.425);
